# algorithms

./: .gitignore  README.md  pyproject.toml
src/search/: binary.py  jump.py  linear.py
